tests/paczka2/big_fuzzy/27813023.err
Error in line 1: vJw9Un A722 65,4
Error in line 9: nXtxM0E9Q S587 2,9
Error in line 8: akHxpY A512 98,5
Error in line 12: akHxpY S587 21,7
Error in line 19: S587 S587 10,88
Error in line 24: VCB A722 94,7
Error in line 32: VCB A254 30,1
Error in line 28: CArYG3ObN4 A722 22,0
Error in line 37: gNZZFLY3 A512 15,0
Error in line 59: gNZZFLY3 A254 98,8
Error in line 62: S587 S587 -3,0
Error in line 63: CArYG3ObN4 A722 57,4
Error in line 76: gNZZFLY3 A512 25,8
Error in line 80: CArYG3ObN4 SG87 239,0
Error in line 91: VCB A722 78,2
Error in line 97: S587 A512 95,4
Error in line 103: CArYG3ObN4 S587 40,3
Error in line 84: gNZZFLY3 A722 10,6
Error in line 102: vJw9Un A512 63,9
Error in line 112: gNZZFLY3 A512 -4,3
Error in line 117: akHxpY A254 78,5
Error in line 122: akHxpY S587 13,4
Error in line 120: VCB A722 8,6
Error in line 134: S587 A722 57,6
Error in line 111: nXtxM0E9Q A722 10,1
Error in line 161: VCB A25b b1,7
Error in line 162: gNZZFLY3 A512 119,2
Error in line 160: S587 A254 73,2
Error in line 174: nXtxM0E9Q A254 16,9
Error in line 176: akHxpY S587 0,3
Error in line 175: nXtxM0E9Q A722 12,3
Error in line 179: S587 A254 38,3
Error in line 191: vJw9Un A254 53,5
Error in line 194: CArYG3ObN4 A722 0,7
Error in line 198: CArYG3ObN4 A512 97,8
Error in line 203: gNZZFLY3 A722 53,d
Error in line 206: CArYG3ObN4 A254 99,3
Error in line 209: CArYG3ObN4 A722 40,1
Error in line 205: gNZZFLY3 A722 60,5
Error in line 218: nXtxM0E9Q S587 37,4
